--- a/css/main.css
+++ b/css/main.css
@@ -453,10 +453,6 @@ header {
     transform: translateX(70px);
 }
 
-.assortment__gaining-momentum {
-    margin-bottom: 138px;
-}
-
 .assortment__title {
     font-weight: 600;
     font-size: 25px;
@@ -497,6 +493,7 @@ header {
 .assortment__text {
     max-width: 454px;
     position: relative;
+    margin-bottom: 138px;
 }
 
 .assortment-slider__name {
@@ -541,10 +538,6 @@ header {
 }
 
 /*assortment__sale*/
-.assortment__sale {
-    margin-bottom: 138px;
-}
-
 .assortment__title-sale {
     margin-bottom: 37px;
 }
@@ -553,6 +546,10 @@ header {
     min-width: 839px;
     min-width: 454px;
     margin-bottom: 37px;
+}
+
+.assortment__text {
+    margin-bottom: 138px;
 }
 
 /*nike-and-jordan*/
@@ -565,6 +562,7 @@ header {
 }
 
 .nike-and-jordan__bg {
+    position: relative;
     background-image: url(../img/Nike&Jordan.png);
     background-position: top center;
     background-size: cover;
@@ -582,23 +580,26 @@ header {
 }
 
 .nike-and-jordan__bg h3 {
+    position: absolute;
+    top: 604px;
+    left: 55px;
+
     font-weight: 500;
     font-size: 22px;
     line-height: 27px;
     color: var(--color-white);
-
-    padding-top: 604px;
-    padding-left: 55px;
-    margin-bottom: 25px;
 }
 
 .nike-and-jordan__bg a {
+    position: absolute;
+    top: 656px;
+    left: 52px;
+
     font-weight: 600;
     font-size: 18px;
     line-height: 22px;
     color: var(--color-white);
     padding: 13px 35px 13px 36px;
-    margin-left: 52px;
     transition: 0.8s;
 
     background: var(--color-black);
@@ -611,3 +612,134 @@ header {
     background: var(--color-white);
     color: var(--color-black);
 }   
+
+@media (max-width: 1000px) {
+    .nike-and-jordan__bg {
+        position: relative;
+        width: 100%;
+        height: 400px;
+        margin-left: 0px;
+    }
+
+    .nike-and-jordan__bg h3 {
+        position: absolute;
+        top: 155px;
+        left: 40%;
+    }
+
+    .nike-and-jordan__bg a {
+        position: absolute;
+        top: 200px;
+        left: 40%;
+    }
+}
+
+
+/*assortment__sport*/
+.assortment__title-sport {
+    margin-bottom: 37px;
+}
+
+.assortment-slider__img-sport {
+    margin-bottom: 22px;
+}
+
+.assortment__text-sport {
+    margin-bottom: 138px;
+}
+
+/*assortment__winter*/
+.assortment__title-winter {
+    margin-bottom: 37px;
+}
+
+.assortment-slider__img-winter {
+    margin-bottom: 37px;
+}
+
+.assortment__text-winter {
+    margin-bottom: 141px;
+}
+
+/*nike-club*/
+.nike-club__bg {
+    position: relative;
+    background-image: url(../img/nike-club-bg.png);
+    background-repeat: no-repeat;
+
+    max-width: 1440px;
+    height: 430px;
+
+    margin-left: -103px;
+    margin-bottom: 139px;
+}   
+
+.nike-club__title {
+    position: absolute;
+    top: 69px;
+    right: -16px;
+
+    font-weight: 900;
+    font-size: 45px;
+    line-height: 55px;
+    color: var(--color-white);
+}
+
+.nike-club__subtitle {
+    position: absolute;
+    top: 146px;
+    right: 166px;
+
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 30px;
+    color: var(--color-white);
+
+    margin-bottom: 20px;
+}
+
+.nike-club__link {
+    display: inline-block;
+    position: absolute;
+    right: 500px;
+    top: 240px;
+
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 22px;
+    color: var(--color-black);
+    padding: 13px 36px;
+
+    background: var(--color-white);
+    border-radius: 50px;
+
+    transition: 0.8s;
+}
+
+.nike-club__link:hover,
+.nike-club__link:active,
+.nike-club__link:focus {
+    color: var(--color-white);
+    background: var(--color-black);
+    border-radius: 0px;
+}
+
+@media (max-width: 680px) {
+    .nike-club__title {
+        position: static;
+        margin-left: 100px;
+        padding-top: 30px;
+    }
+
+    .nike-club__subtitle {
+        position: static;
+        margin-left: 100px;
+        padding-top: 30px;
+    }
+
+    .nike-club__link {
+        position: static;
+        margin-left: 100px;
+        margin-top: 30px;
+    }
+}
