--- a/css/main.css
+++ b/css/main.css
@@ -796,7 +796,8 @@ header {
 }
 
 .footer-container {
-    max-width: 1280px;
+    max-width: 1250px;
+    padding: 0 15px;
     margin: 0px auto;
     position: relative;
 }
@@ -804,12 +805,25 @@ header {
 .footer__row {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     padding-top: 75px;
     margin-bottom: 97px;
 }
 
 .footer__row-list {
     display: flex;
+    margin-right: 100px;
+    margin-bottom: 40px;
+}
+
+@media (max-width:354px) {
+    .footer__row-list {
+        flex-wrap: wrap;
+    }
+
+    .footer__list:nth-child(1) {
+        margin-bottom: 40px;
+    }
 }
 
 .footer__list:nth-child(1) {
@@ -848,6 +862,16 @@ header {
 
 .footer__item:not(:last-child) {
     margin-bottom: 18px;
+}
+
+@media (min-width:583px) {
+    .social-networks-list {
+        display: flex;
+    }
+
+    .social-networks-item:not(:last-child) {
+        margin-right: 30px;
+    }
 }
 
 .social-networks-item {
@@ -896,3 +920,62 @@ header {
     margin-bottom: 20px;
 }
 
+.bottom-inf {
+    display: flex;
+    justify-content: space-between;
+}
+
+.bottom-inf__text {
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 18px;
+    color: #858585;
+}
+
+.bottom-inf__list {
+    display: flex;
+}
+
+.bottom-inf__list a {
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 18px;
+    letter-spacing: 0.01em;
+    color: #858585;
+    
+    transition: 0.8s;
+}
+
+.bottom-inf__list a:hover,
+.bottom-inf__list a:focus,
+.bottom-inf__list a:active {
+    background: var(--color-black);
+    color: var(--color-white);
+    border-radius: 50px;
+    padding: 10px;
+    box-shadow: 0 0 11px var(--color-gray);
+}
+
+.bottom-inf__item:not(:last-child) {
+    margin-right: 46px;
+}
+
+@media (max-width:944px) {
+    .bottom-inf {
+        display: block;
+    }
+
+    .bottom-inf__text {
+        margin-bottom: 30px;
+    }
+
+    @media (max-width:577px) {
+        .bottom-inf__list {
+            display: block;
+        }
+        
+        .bottom-inf__item {
+            margin-bottom: 20px;
+        }
+    }
+}
