--- a/css/main.css
+++ b/css/main.css
@@ -138,13 +138,12 @@ header {
     .menu__btn {
         display: flex; /* используем flex для центрирования содержимого */
         align-items: center;  /* центрируем содержимое кнопки */
-        position: fixed;
+        position: absolute;
         top: 20px;
         left: 20px;
         width: 26px;
         height: 26px;
         cursor: pointer;
-        z-index: 50;
     }
     
     /* добавляем "гамбургер" */
@@ -181,6 +180,7 @@ header {
         text-align: center;
         background-color: #F6F6F6;
         box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+        z-index: 1;
     }
     /* элементы меню */
     .menu__item {
