--- a/css/main.css
+++ b/css/main.css
@@ -155,6 +155,7 @@ header {
         width: 100%;
         height: 2px;
         background-color: #616161;
+        z-index: 2;
     }
     .menu__btn > span::before {
         content: '';
